# rust-kafka_basic

./: .gitignore  Makefile  README.md
docker/: docker-compose.yml
rust_kafka/: .env  Cargo.toml
rust_kafka/src/: main.rs
rust_kafka/src/kafka/: config.rs  consumer.rs  mod.rs  producer.rs
